@@ -47,38 +47,38 @@ uint32_t _rpmjs_options = _RPMJS_OPTIONS;
 /*@unchecked@*/
 int _rpmjs_zeal = 2;
 
-#ifdef	NOTYET
+struct rpmjs_s _rpmgsr;
+
 struct poptOption rpmjsIPoptTable[] = {
-  { "allow", 'a', POPT_BIT_SET,		&_js.flags, RPMJS_FLAGS_ALLOW,
+  { "allow", 'a', POPT_BIT_SET,		&_rpmgsr.flags, RPMJS_FLAGS_ALLOW,
         N_("Allow (read-only) access to caller's environmen"), NULL },
-  { "nocache", 'C', POPT_BIT_SET,	&_js.flags, RPMJS_FLAGS_NOCACHE,
+  { "nocache", 'C', POPT_BIT_SET,	&_rpmgsr.flags, RPMJS_FLAGS_NOCACHE,
         N_("Disables compiler caching via JSScript XDR serialization"), NULL },
-  { "loadrc", 'R', POPT_BIT_SET,	&_js.flags, RPMJS_FLAGS_LOADRC,
+  { "loadrc", 'R', POPT_BIT_SET,	&_rpmgsr.flags, RPMJS_FLAGS_LOADRC,
         N_("Load RC file for interpreter based on script filename."), NULL },
-  { "nowarn", 'W', POPT_BIT_SET,	&_js.flags, RPMJS_FLAGS_NOWARN,
+  { "nowarn", 'W', POPT_BIT_SET,	&_rpmgsr.flags, RPMJS_FLAGS_NOWARN,
         N_("Do not report warnings"), NULL },
 
-  { "norelimit", 'e', POPT_BIT_CLR,	&_js.flags, RPMJS_FLAGS_RELIMIT,
+  { "norelimit", 'e', POPT_BIT_CLR,	&_rpmgsr.flags, RPMJS_FLAGS_RELIMIT,
         N_("Do not limit regexps to n^3 levels of backtracking"), NULL },
-  { "nojit", 'J', POPT_BIT_CLR,		&_js.flags, RPMJS_FLAGS_JIT,
+  { "nojit", 'J', POPT_BIT_CLR,		&_rpmgsr.flags, RPMJS_FLAGS_JIT,
         N_("Disable nanojit"), NULL },
-  { "nostrict", 'S', POPT_BIT_CLR,	&_js.flags, RPMJS_FLAGS_STRICT,
+  { "nostrict", 'S', POPT_BIT_CLR,	&_rpmgsr.flags, RPMJS_FLAGS_STRICT,
         N_("Disable Strict mode"), NULL },
-  { "noutf8", 'U', POPT_BIT_SET,	&_js.flags, RPMJS_FLAGS_NOUTF8,
+  { "noutf8", 'U', POPT_BIT_SET,	&_rpmgsr.flags, RPMJS_FLAGS_NOUTF8,
         N_("Disable UTF-8 C string processing"), NULL },
-  { "xml", 'x', POPT_BIT_SET,		&_js.flags, RPMJS_FLAGS_XML,
+  { "xml", 'x', POPT_BIT_SET,		&_rpmgsr.flags, RPMJS_FLAGS_XML,
         N_("Parse <!-- comments --> as E4X tokens"), NULL },
 
-  { "anonfunfix", '\0', POPT_BIT_SET|POPT_ARGFLAG_DOC_HIDDEN,	&_js.flags, RPMJS_FLAGS_ANONFUNFIX,
+  { "anonfunfix", '\0', POPT_BIT_SET|POPT_ARGFLAG_DOC_HIDDEN,	&_rpmgsr.flags, RPMJS_FLAGS_ANONFUNFIX,
         N_("Parse //@line number [\"filename\"] for XUL"), NULL },
-  { "atline", 'A', POPT_BIT_SET|POPT_ARGFLAG_DOC_HIDDEN,	&_js.flags, RPMJS_FLAGS_ATLINE,
+  { "atline", 'A', POPT_BIT_SET|POPT_ARGFLAG_DOC_HIDDEN,	&_rpmgsr.flags, RPMJS_FLAGS_ATLINE,
         N_("Parse //@line number [\"filename\"] for XUL"), NULL },
-  { "werror", 'w', POPT_BIT_SET|POPT_ARGFLAG_DOC_HIDDEN,	&_js.flags, RPMJS_FLAGS_WERROR,
+  { "werror", 'w', POPT_BIT_SET|POPT_ARGFLAG_DOC_HIDDEN,	&_rpmgsr.flags, RPMJS_FLAGS_WERROR,
         N_("Convert warnings to errors"), NULL },
 
   POPT_TABLEEND
 };
-#endif
 
 static void rpmjsFini(void * _js)
 	/*@globals fileSystem @*/
